[package]
name = "enigma"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
log = "0.4.14"
structopt = "0.3.13"
tempfile = "3"
strum = "0.21"
strum_macros = "0.21"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
test-case = "1.2.1"